* Add support for gzipstdout and binarystdout to PipedExecBuilder (CC-991). Patch by Daniel Tihelka.
* Add repipe="" and disable="" attributes to allow change plugin-preconfigured pipes
* Refactoring of the builder - it now allows to plug 3rd party modules into the pipe. They only must
  implement PipedScript interface (with the optional use of PipedScriptBase helper class)

EmailPublisher
----------------------
* Include label in subject of build failure email (CC-1022). Patch by Quinn Styl.

ProjectStatus
----------------------
* New SourceControl module designed as the combination of <buildstatus/> (i.e. triggers when the depending project is built with success) and <veto /> (cancels the build when the depending project has modifications not built yet)


Dashboard
======================
* Fix build error in Dashboard on MacOSX due to java.io.tempdir name when converted to URI. (CC-976)
* Add missing icon image for "unknown" modification type (CC-799). Reported by John Prause.

 contrib
======================

distributed
----------------------
* Add BuildAgent Host Name info into remote build results, similar to how CompositeBuilder inserts child builder info.

documentation
======================
* Include main javadocs in website, as they are referenced from project docs, eg: main/plugins.html. Reported by Pavel Krusina.


CruiseControl Release Notes - 2.8.4

general
======================
* Fix binaryrelease/cruisecontrol.sh startup script to convert JETTY_LOGS variable when run under cygwin (CC-983). Patch by Mark Bretl.
* build script cleanups.

build loop
======================
* Add a JMX operation to retrieve build logs (CC-908). Adapted from patch by Ivan "Rambius" Ivanov. Tested by Antoine Levy Lambert.
* Add FileResolver/ResolverUser to detect and re-read changed property files (CC-952). Patch by Daniel Tihelka. 
* BuildOutputLogger with multiple builds interfere with each other with multiple threads (CC-911). Patch by Grzegorz Olędzki. 