@@ -41,6 +41,7 @@ PipedExecBuilder
 * Add repipe="" and disable="" attributes to allow change plugin-preconfigured pipes
 * Refactoring of the builder - it now allows to plug 3rd party modules into the pipe. They only must
   implement PipedScript interface (with the optional use of PipedScriptBase helper class)
+* To disable or re-pipe scrit, use new directives <repipe id="ID" pipefrom="new_pipe"/> (instead of <exec id="ID" repipe="new_pipe"/>) and <disable id="ID"/> (instead of <exec id="ID" disable="true"/>). It is more generic.
 
 EmailPublisher
 ----------------------
